# bybit-grid-trading-system

./: .dockerignore  .gitignore  README.md  alembic.ini  project_overview.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: schema.py  secrets.env.example  settings.yaml
docker/: Dockerfile  docker-compose.yml
docs/: alerting_rules.md  api.md  backup_strategy.md  database_schema.md  deployment.md  disaster_recovery.md  gdpr_compliance.md  load_testing.md  risk_disclaimer.md  test_plan.md
docs/runbooks/: bybit_latency_degraded.md  db_down.md  db_replication_lag.md  high_error_rate_bybit.md  high_http_5xx_rate.md  http_latency_degraded.md  kill_switch_triggered.md  max_drawdown_exceeded.md  no_ws_data.md  redis_down.md  slippage_spike.md  wr_drop.md
frontend/templates/: index.html
monitoring/: alerts.yml
scripts/: backup.py  migrate.py  restore.py  run_calibration.py
src/: main.py
src/api/: __init__.py
src/auth/: jwt_manager.py  middleware.py  passwords.py  rbac.py  totp.py
src/core/: archiver.py  config_loader.py  constants.py  distributed_lock.py  exceptions.py  logging_config.py  models.py  reconciliation.py
src/data/: __init__.py  collector.py  orderbook_logger.py  storage.py
src/db/: connection.py  migrations.py
src/execution/: __init__.py  fill_tracker.py  order_manager.py  slippage_monitor.py
src/monitoring/: __init__.py  alerts.py  metrics.py
src/notifications/: __init__.py  ui_notifier.py  webhooks.py
src/risk/: __init__.py  anti_churn.py  position_limits.py  risk_manager.py
src/strategies/: __init__.py  avi5.py  calibration.py  indicators.py
tests/: conftest.py
tests/fixtures/: sample_kline.json  sample_ob.json
tests/integration/: test_bybit_ws.py  test_order_lifecycle.py  test_sse_stream.py
tests/unit/: test_indicators.py  test_rate_limiter.py  test_risk_manager.py  test_signal_engine.py
(+23 files in other folders)
